# base-cxx

./: cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_name|lower}}/: Makefile.am  configure.ac  main.cc
{{cookiecutter.project_name|lower}}/m4/: ax_cxx_compile_stdcxx_11.m4  boost.m4
{{cookiecutter.project_name}}/: .gitignore  CMakeLists.txt  main.cc  test_example.cc  test_{{cookiecutter.project_name}}.sh  {{cookiecutter.project_name}}.cc  {{cookiecutter.project_name}}.hh
