AC_INIT([{{cookiecutter.project_name|lower}}],[0.0.1],[github@tomlee.co])
AC_CONFIG_AUX_DIR([build-aux])
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE([1.9 foreign])

AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CXX
AC_PROG_LIBTOOL

AX_CXX_COMPILE_STDCXX_11([noext],[mandatory])
BOOST_REQUIRE([1.54])
BOOST_SYSTEM
BOOST_BIND
BOOST_FORMAT
BOOST_FUNCTION
BOOST_UTILITY
dnl BOOST_ASIO

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

